13-network-policy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: podA-allow-from-web
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: utrains
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: web
